--- a/Tagup/Tagup/Info.plist
+++ b/Tagup/Tagup/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>We need to use your camera for searching keys with image</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>mailto</string>
@@ -11,14 +13,14 @@
 		<key>development</key>
 		<dict>
 			<key>AppID</key>
-			<string>id6642650378</string>
+			<string>id6502000076</string>
 			<key>baseUrl</key>
 			<string>https://ai.tag-up.uk/</string>
 		</dict>
 		<key>production</key>
 		<dict>
 			<key>AppID</key>
-			<string>id6642650378</string>
+			<string>id6502000076</string>
 			<key>baseUrl</key>
 			<string>https://ai.tag-up.uk/</string>
 		</dict>
